--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -9,13 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import math\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import OneHotEncoder"
    ]
   },
   {
@@ -525,6 +527,65 @@
     "def logistic_regression(w, b, x):\n",
     "    return 1 if sigmoid(np.dot(w, x) + b) >= 0.5 else 0"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercice 03 Part 02"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q1\n",
+    "Done"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     age;\"job\";\"marital\";\"education\";\"default\";\"balance\";\"housing\";\"loan\";\"contact\";\"day\";\"month\";\"duration\";\"campaign\";\"pdays\";\"previous\";\"poutcome\";\"y\"\n",
+      "0     30;\"unemployed\";\"married\";\"primary\";\"no\";1787;...                                                                                                  \n",
+      "1     33;\"services\";\"married\";\"secondary\";\"no\";4789;...                                                                                                  \n",
+      "2     35;\"management\";\"single\";\"tertiary\";\"no\";1350;...                                                                                                  \n",
+      "3     30;\"management\";\"married\";\"tertiary\";\"no\";1476...                                                                                                  \n",
+      "4     59;\"blue-collar\";\"married\";\"secondary\";\"no\";0;...                                                                                                  \n",
+      "...                                                 ...                                                                                                  \n",
+      "4516  33;\"services\";\"married\";\"secondary\";\"no\";-333;...                                                                                                  \n",
+      "4517  57;\"self-employed\";\"married\";\"tertiary\";\"yes\";...                                                                                                  \n",
+      "4518  57;\"technician\";\"married\";\"secondary\";\"no\";295...                                                                                                  \n",
+      "4519  28;\"blue-collar\";\"married\";\"secondary\";\"no\";11...                                                                                                  \n",
+      "4520  44;\"entrepreneur\";\"single\";\"tertiary\";\"no\";113...                                                                                                  \n",
+      "\n",
+      "[4521 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('bank.csv')\n",
+    "\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
